--- a/index.html
+++ b/index.html
@@ -13,10 +13,31 @@
         <input type="color" name="color1" id="color1" value="#f14e0d" />
       </label>
       <label for="color2">
-        <input type="color" name="color2" id="color2" />
+        <input type="color" name="color2" id="color2" value="#00ac0d" />
       </label>
+      <select name="direction" id="direction">
+        <option value="to right">To Right</option>
+        <option value="to left">To Left</option>
+        <option value="to top">To Top</option>
+        <option value="to bottom">To Bottom</option>
+        <option value="45deg">45 Degrees</option>
+        <option value="90deg">90 Degrees</option>
+        <option value="180deg">180 Degrees</option>
+        <option value="360deg">360 Degrees</option>
+      </select>
       <button id="btn1">Generate</button>
     </div>
+    <div id="output"></div>
     <script src="app.js"></script>
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
+    <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
+    <script>
+      tippy("#output", {
+        content: "Click to copy",
+        placement: "bottom-start",
+        duration: 1000,
+        theme: "material",
+      });
+    </script>
   </body>
 </html>
