elements add/updated

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           </select>
         </div>
         <button id="btn1">Generate</button>
+        <button id="btn2">Randomize</button>
       </div>
 
       <p id="output"></p>
