--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
 
       <p id="output"></p>
     </div>
-
+    <footer>
+      <p>
+        Made by
+        <a href="https://github.com/RakibRahman" target="_rakib"
+          >Rakib Rahman</a
+        >
+        with ♥
+      </p>
+    </footer>
     <script src="app.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
     <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
